fix user assign role